codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_renders_resume_progress_percentage.snap
---
source: tui/src/startup_draft_tests.rs
expression: rendered
---

  >_ OpenAI Codex (v<VERSION>)
     loading
  Resuming session… 42%

› Ask Codex to do anything

  ? for shortcuts
